[gd_scene load_steps=2 format=3 uid="uid://lxbuehwddqs"]

[ext_resource type="Script" uid="uid://fucgs5ff6485" path="res://ui/menus/components/panel/input_action_keybinding.gd" id="1_6njha"]

[node name="InputActionKeybinding" type="HBoxContainer"]
script = ExtResource("1_6njha")

[node name="ActionLabel" type="Label" parent="."]
layout_mode = 2
text = "ACTION NAME"

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputKeyPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="InputKeyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputKeyLabel" type="Label" parent="InputKeyPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "INPUT KEY"
